--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -14,7 +14,7 @@
         <slf4j.version>1.6.1</slf4j.version>
         <maven.failsafe.plugin.version>2.18</maven.failsafe.plugin.version>
         <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -104,6 +104,13 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>xml-path</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
             <version>4.2.1</version>
         </dependency>
 
