--- a/OnlinerWebDriver/pom.xml
+++ b/OnlinerWebDriver/pom.xml
@@ -22,6 +22,12 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.4.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
