--- a/OnlinerWebDriver/pom.xml
+++ b/OnlinerWebDriver/pom.xml
@@ -32,8 +32,8 @@
     </dependencies>
 
     <properties>
-        <project.build.sourceEncoding>windows-1251</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>windows-1251</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
